Import of DROLSKY/WebService-StreetMapLink-0.04 from CPAN.
gitpan-cpan-distribution: WebService-StreetMapLink
gitpan-cpan-version:      0.04
gitpan-cpan-path:         DROLSKY/WebService-StreetMapLink-0.04.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.04    2004-12-07
+
+- A prereq, Class::Factory::Util, was missing from the Build.PL file.
+
+
 0.03    2004-12-07
 
 - streetdirectory.com.sg now forbids deep linking in their TOS, and
