Import of DROLSKY/WebService-StreetMapLink-0.05 from CPAN.
gitpan-cpan-distribution: WebService-StreetMapLink
gitpan-cpan-version:      0.05
gitpan-cpan-path:         DROLSKY/WebService-StreetMapLink-0.05.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+0.05    2005-02-08
+
+- Added a Priority() class method to handle the case when two
+subclasses handle the same country(ies).
+
+- Support for Google Maps in the USA.  Google has a higher priority
+than Mapquest.
+
+
 0.04    2004-12-07
 
 - A prereq, Class::Factory::Util, was missing from the Build.PL file.
