--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.06    2005-02-08
+
+- Forgot to update the MANIFEST before uploading 0.06.  This one
+really has the Google bits.
+
+
 0.05    2005-02-08
 
 - Added a Priority() class method to handle the case when two
