--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.07    2005-04-20
+
+- Google Maps now support the United Kingdom.
+
+
 0.06    2005-02-08
 
 - Forgot to update the MANIFEST before uploading 0.06.  This one
