--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.08    2005-05-06
+
+- Prefer Google to MapQuest for Canada.
+
+- The address string passed to Google now includes the country name.
+
+
+
 0.07    2005-04-20
 
 - Google Maps now support the United Kingdom.
