Import of DROLSKY/WebService-StreetMapLink-0.09 from CPAN.
gitpan-cpan-distribution: WebService-StreetMapLink
gitpan-cpan-version:      0.09
gitpan-cpan-path:         DROLSKY/WebService-StreetMapLink-0.09.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.09    2005-05-23
+
+- Only use first 5 digits of US zip codes for Google links.
+
+
 0.08    2005-05-06
 
 - Prefer Google to MapQuest for Canada.
